[package]
name = "klotski"
version = "0.0.2"
edition = "2021"
authors = ["Dnomd343 <dnomd343@gmail.com>"]
description = "Klotski multifunctional engine with high performance"
repository = "https://github.com/dnomd343/klotski"
license = "BSD-3-Clause"
readme = "README.md"

[profile.release]
lto = "fat"
panic = "abort"

# TODO: also for `profile.test` and `profile.bench`

[dependencies]
cxx = "1.0"

[build-dependencies]
cmake = "0.1"
cxx-build = "1.0"
